# hs-net

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cliff.toml  pyproject.toml
.agents/skills/hs-net/: SKILL.md
.claude/: ecc-tools.json  identity.json
.claude/commands/: engine-module-change-with-tests.md  feature-addition-with-tests.md  feature-development.md
.codex/: AGENTS.md
.github/workflows/: ci.yml  publish.yml
docs/: package.json  pnpm-lock.yaml  rspress.config.ts  wrangler.jsonc
docs/docs/: _nav.json  index.md
docs/docs/api/: _meta.json  config.mdx  exceptions.mdx  (+4 more)
docs/plans/: 2026-04-01-v0.2.0-design.md  2026-04-01-v0.2.0-plan.md  2026-04-10-identity-proxy-routing.md  2026-04-11-browser-engine.md
examples/: 01_basic_get.py  02_http_methods.py  03_selectors.py  04_middleware.py  05_multi_engine.py  06_advanced.py  07_real_world.py  08_shortcuts.py  09_streaming.py  10_optional_deps.py  11_proxy_service.py  README.md
examples/basic/: README.md  get.py  http_methods.py  shortcuts.py
examples/config/: README.md  concurrency.py  config.py  cookie.py  error_handling.py  rate_limit.py
examples/engine/: README.md  multi_engine.py  streaming.py
examples/middleware/: README.md  cache.py  request_before.py  response_after.py  retry.py
examples/parsing/: README.md  css_xpath.py  jmespath_query.py
examples/proxy/: README.md  api_proxy.py  async_proxy.py  custom_provider.py  domain_rules.py  fixed_proxy.py  identity_routing.py  switch_proxy.py  transit_proxy.py
examples/real_world/: README.md  anti_bot.py  api_client.py  batch_request.py  scraping.py
src/hs_net/: __init__.py  _request_builder.py  _shared.py  client.py  config.py  exceptions.py  models.py  proxy.py  rate_limit.py  shortcuts.py  signals.py  sync_client.py  ua.py
tests/: conftest.py  test_client_integration.py  test_config.py  test_engine_availability.py  test_engines.py  test_exceptions.py  test_models.py  test_proxy.py  test_rate_limit.py  test_request_builder.py  test_response.py  test_shortcuts.py  test_signals.py  test_ua.py
(+63 files in other folders)
